Fixed css overflow, pagination

--- a/skin/frontend/rwd/default/css/emagedev-news.less
+++ b/skin/frontend/rwd/default/css/emagedev-news.less
@@ -12,6 +12,7 @@
 
     section.news-entry-content{
       padding: .7rem 1.4rem;
+      overflow: hidden;
     }
 
     footer{
@@ -48,6 +49,7 @@
 
       section.news-entry-content{
         padding: .4rem .6rem;
+        overflow: hidden;
       }
 
       footer{
@@ -141,6 +143,7 @@ article.news-entry{
 
   section.news-entry-content{
     font-family: Georgia, "Times New Roman", "Bitstream Charter", Times, serif;
+    overflow: hidden;
 
     img{
       margin: 1rem;
